lib/manifests/grafana/grafana-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - name: datasource-provisioning
              mountPath: /etc/grafana/provisioning/datasources
            - name: dashboard-provisioning
              mountPath: /etc/grafana/provisioning/dashboards
            - name: dashboards
              mountPath: /var/lib/grafana/dashboards
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: datasource-provisioning
          configMap:
            name: grafana-datasource-provisioning
        - name: dashboard-provisioning
          configMap:
            name: grafana-dashboard-provisioning
        - name: dashboards
          configMap:
            name: grafana-dashboards
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  to:
    kind: Service
    name: grafana
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
